tests/MathML/basic/bad/deprecated-mtd2.mml
<math xmlns="http://www.w3.org/1998/Math/MathML"><mtd><mrow></mrow></mtd></math>